# MCP-Server

./: .dockerignore  .gitignore  Dockerfile  README.md  audit.db  dashboard.py  ex.py  host.py  pyproject.toml  requirements.txt  risk_db.json  server.py
.github/workflows/: ci.yml
db/: __init__.py  connection.py
models/: schemas.py
prompts/: __init__.py  compliance.py
resources/: __init__.py  schema.py
templates/: dashboard.html
tests/: complete_test.py  load_test.py  test_enrichment.py  test_integration.py  test_reporting.py  test_validation.py
tools/: __init__.py  enrichment.py  reporting.py  validation_tools.py
utils/: __init__.py  auth.py  errors.py  mcp_errors.py
