[project]
name = "mcpserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.0.0",
    "google-genai>=1.64.0",
    "mcp[cli]>=1.26.0",
    "pandas>=3.0.1",
]

[tool.pytest.ini_options]
norecursedirs = ["venv"]
# Explicitly ignore the load test during standard unit test runs
addopts = "--ignore=tests/load_test.py"
